# POLAR-yolo-conversion

./: .gitignore  README.md  pyproject.toml
dataset/: data.yaml
scripts/: convert.py  split.py  train.py
